Fixed section overlapsed

--- a/src/components/Slider.module.scss
+++ b/src/components/Slider.module.scss
@@ -1,3 +1,4 @@
 .slider-wrapper {
+  max-height: 100%;
   padding-bottom: 3rem;
 }
